[gd_scene load_steps=11 format=3 uid="uid://bleiqd8yjy62p"]

[ext_resource type="Theme" uid="uid://c6o5sbust8emw" path="res://ui/menus/layouts/pixel_art/theme/ui_theme.tres" id="1_6o1k1"]
[ext_resource type="Script" uid="uid://usx3a07dykxn" path="res://ui/menus/layouts/pixel_art/world_selection.gd" id="1_6xnh7"]
[ext_resource type="PackedScene" uid="uid://c7x5g1yqaqlni" path="res://ui/menus/layouts/pixel_art/components/menu_display_panel.tscn" id="1_tvcrx"]
[ext_resource type="FontFile" uid="uid://due85r8gmivst" path="res://ui/menus/layouts/pixel_art/theme/fonts/ark_pixel/ark-pixel-10px-monospaced-latin.otf" id="2_nix18"]
[ext_resource type="PackedScene" uid="uid://du0kusvolof3y" path="res://ui/menus/layouts/pixel_art/components/world_save_slot_panel.tscn" id="3_ob8f4"]
[ext_resource type="Texture2D" uid="uid://1pdniev668cm" path="res://assets/geometry/arrows/medium_left.png" id="3_qofbw"]
[ext_resource type="Script" uid="uid://c7xflsrumdoya" path="res://ui/menus/layouts/pixel_art/components/menu_back_button.gd" id="4_dt5u2"]
[ext_resource type="Script" uid="uid://dgjkur7tqncp4" path="res://ui/menus/components/label/project_version.gd" id="4_xorya"]
[ext_resource type="PackedScene" uid="uid://dtxxla3axlugk" path="res://ui/menus/layouts/pixel_art/new_save_screen.tscn" id="8_5pcea"]

[sub_resource type="LabelSettings" id="LabelSettings_dg0fa"]
font = ExtResource("2_nix18")
font_color = Color(0.419813, 0.419813, 0.419813, 1)

[node name="WorldSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_force_pass_scroll_events = false
script = ExtResource("1_6xnh7")

[node name="TemporaryBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.0687983, 0.0687983, 0.0687983, 1)

[node name="MenuDisplayPanel" parent="." instance=ExtResource("1_tvcrx")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
grow_horizontal = 2
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="Version" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "1.0.0"
label_settings = SubResource("LabelSettings_dg0fa")
script = ExtResource("4_xorya")

[node name="BackButton" type="Button" parent="MarginContainer" node_paths=PackedStringArray("linked_menu")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource("1_6o1k1")
icon = ExtResource("3_qofbw")
script = ExtResource("4_dt5u2")
linked_menu = NodePath("../..")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -95.0
offset_right = 173.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="WorldSaveSlots" type="VBoxContainer" parent="ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="WorldSaveSlot" parent="ScrollContainer/WorldSaveSlots" instance=ExtResource("3_ob8f4")]
layout_mode = 2

[node name="WorldSaveSlot2" parent="ScrollContainer/WorldSaveSlots" instance=ExtResource("3_ob8f4")]
layout_mode = 2

[node name="WorldSaveSlot3" parent="ScrollContainer/WorldSaveSlots" instance=ExtResource("3_ob8f4")]
layout_mode = 2

[node name="NewSaveScreen" parent="." instance=ExtResource("8_5pcea")]
visible = false
layout_mode = 1
